--- a/luogu/cpp/.vscode/launch.json
+++ b/luogu/cpp/.vscode/launch.json
@@ -21,6 +21,16 @@
         }
       ],
       "preLaunchTask": "task g++" //修改此项
-    }
+    },
+   
+      {
+              "name": "Python: 当前文件",
+              "type": "python",
+              "request": "launch",
+              "program": "${file}",
+              "console": "integratedTerminal"
+      }
+     
   ]
+ 
 }
