--- a/luogu/.vscode/tasks.json
+++ b/luogu/.vscode/tasks.json
@@ -1,23 +1,41 @@
 {
-    "version": "2.0.0",
-    "tasks": [
+  "version": "2.0.0",
+  "tasks": [
       {
-        "type": "shell",
-        "label": "task g++",  //修改此项
-        "command": "G:\\mingw64\\bin\\g++.exe",
-        "args": [
-          "-g",
-          "${file}",
-          "-o",
-          "${fileDirname}\\${fileBasenameNoExtension}.exe"
-        ],
-        "options": {
-          "cwd": "G:\\mingw64\\bin"
-        },
-        "problemMatcher": [
-          "$gcc"
-        ],
-        "group": "build"
+          "label": "task g++",
+          "type": "shell",
+          "group": {
+              "kind": "build",
+              "isDefault": true
+          },
+          "presentation": {
+              "echo": true,
+              "reveal": "always",
+              "focus": false,
+              "panel": "shared"
+          },
+          "windows": {
+              "command": "g++",
+              "args": [
+                  "-ggdb",
+                  "\"${file}\"",
+                  "--std=c++11",
+                  "-o",
+                  "\"${fileDirname}\\${fileBasenameNoExtension}.exe\""
+              ]
+          },
+          "problemMatcher": {
+            "owner": "cpp",
+            "fileLocation": ["relative", "\\"],
+            "pattern": {
+                "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                "file": 1,
+                "line": 2,
+                "column": 3,
+                "severity": 4,
+                "message": 5
+            }
+        }
       }
-    ]
-  }
+  ]
+}
