--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "*.tcc": "cpp",
         "list": "cpp",
         "unordered_map": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "array": "cpp",
+        "string_view": "cpp"
     }
     //"C_Cpp.errorSquiggles": "Disabled"
 }
