--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,14 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "array": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "xhash": "cpp",
+        "xlocinfo": "cpp",
+        "xstring": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     }
     //"C_Cpp.errorSquiggles": "Disabled"
 }
