--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,10 @@
         "initializer_list": "cpp",
         "cstdlib": "cpp",
         "xiosbase": "cpp",
-        "xlocale": "cpp"
+        "xlocale": "cpp",
+        "algorithm": "cpp",
+        "limits": "cpp",
+        "utility": "cpp"
     }
     //"C_Cpp.errorSquiggles": "Disabled"
 }
